@@ -2402,3 +2402,4 @@
 ( cvs diff -u -r 1.274.2.174 -r 1.274.2.175 src/mainwindow.c;  cvs diff -u -r 1.25.2.24 -r 1.25.2.25 src/matcher_parser_parse.y;  cvs diff -u -r 1.204.2.121 -r 1.204.2.122 src/prefs_common.c;  cvs diff -u -r 1.1.2.32 -r 1.1.2.33 src/prefs_msg_colors.c;  cvs diff -u -r 1.60.2.42 -r 1.60.2.43 src/procmsg.h;  cvs diff -u -r 1.2.2.16 -r 1.2.2.17 src/gtk/colorlabel.c;  cvs diff -u -r 1.1.4.6 -r 1.1.4.7 src/gtk/colorlabel.h;  ) > 2.8.0cvs7.patchset
 ( cvs diff -u -r 1.274.2.175 -r 1.274.2.176 src/mainwindow.c;  cvs diff -u -r 1.2.2.17 -r 1.2.2.18 src/gtk/colorlabel.c;  ) > 2.8.0cvs8.patchset
 ( cvs diff -u -r 1.28.2.33 -r 1.28.2.34 src/mbox.c;  ) > 2.8.0cvs9.patchset
+( cvs diff -u -r 1.654.2.2458 -r 1.654.2.2459 configure.ac;  cvs diff -u -r 1.115.2.140 -r 1.115.2.141 src/main.c;  cvs diff -u -r 1.13.2.26 -r 1.13.2.27 src/common/plugin.c;  ) > 2.8.0cvs10.patchset
